packages/op-tooling/op-deployer/v5/README.md
# Op-Deployer v5 — Upgrade to v5.0.0

Scripts for deploying and upgrading Optimism contracts to `v5.0.0` (U17) on Celo networks using `op-deployer`.

## Prerequisites

- [op-deployer](https://github.com/celo-org/optimism) built from the `celo-contracts/v5.0.0` branch
- `jq` installed for JSON processing

## Key Differences from v4

| Aspect                       | v4                          | v5                            |
| ---------------------------- | --------------------------- | ----------------------------- |
| Target version               | `v4.1.0` (U16a)             | `v5.0.0` (U17)                |
| MIPS version default         | 7                           | 8                             |
| Prestate hash                | `0x03eb0710...`             | `0x03caa187...`               |

## Environment Variables

### Required Variables

- `NETWORK` — Target network (`chaos`, `sepolia`, `mainnet`)
- `OP_ROOT` — Path to the Optimism repository
- `DEPLOYER_PK` — Private key of the deployer account

### Optional Variables

- `RPC_URL` — Defaults to `http://localhost:8545` (locally forked network). Set to target RPC for on-chain deployment.
- `VERIFIER_API_KEY` — Etherscan API key for contract verification. When set, bootstrap automatically passes `--verify --verifier-api-key` to op-deployer.

## Scripts

### `run_upgrade.sh`

Orchestrates the complete upgrade: `bootstrap.sh` → `upgrade.sh`.

**Features:**

- Automatically sets network-specific multisig addresses
- Falls back to default Anvil deployer key if `DEPLOYER_PK` is not set
- Validates `NETWORK` before proceeding

**Network Multisig Addresses:**

- **chaos**: `0x6F8DB5374003c9ffa7084d8b65c57655963766a9`
- **sepolia**: `0x5e60d897Cd62588291656b54655e98ee73f0aabF`
- **mainnet**: `0x4092A77bAF58fef0309452cEaCb09221e556E112`

**Example:**

```bash
NETWORK="mainnet" OP_ROOT="/path/to/optimism" ./run_upgrade.sh
```

### `bootstrap.sh`

Deploys Optimism contract implementations and creates `config-upgrade.json` for the upgrade step.

**Features:**

- Deploys all L1 contract implementations for v5.0.0
- Generates `config-upgrade.json` with OPCM address and chain configurations
- Passes `--superchain-proxy-admin` and `--challenger` to op-deployer
- No validator config generation (same as v4)
- Supports optional contract verification via `VERIFIER_API_KEY` env var (new in v5)

**Prestate Hash:** `0x03caa1871bb9fe7f9b11217c245c16e4ded33367df5b3ccb2c6d0a847a217d1b`

**Network-Specific Configurations:**

| Network | Superchain Config Upgradeable |
| ------- | ----------------------------- |
| chaos   | Yes                           |
| sepolia | Yes                           |
| mainnet | No                            |

**Example:**

```bash
NETWORK="mainnet" OP_ROOT="/path/to/optimism" MULTISIG_ADDRESS="0x..." DEPLOYER_PK="0x..." ./bootstrap.sh

# With contract verification
NETWORK="mainnet" OP_ROOT="/path/to/optimism" MULTISIG_ADDRESS="0x..." DEPLOYER_PK="0x..." VERIFIER_API_KEY="your_api_key" ./bootstrap.sh
```

### `upgrade.sh`

Performs the actual upgrade of L1 contracts to v5.0.0 using `config-upgrade.json`.

**Features:**

- Hardcoded upgrade to `v5.0.0` (no `VERSION` env var)
- Does not require a private key (uses prank from config)

**Example:**

```bash
NETWORK="mainnet" OP_ROOT="/path/to/optimism" ./upgrade.sh
```

## Configuration Files

### `config-upgrade.json`

Generated by `bootstrap.sh`. Contains configuration for the upgrade step.

**Key Fields:**

- `prank` — Address to impersonate for upgrades (Proxy Admin Owner)
- `opcm` — Optimism Chain Manager address (extracted from bootstrap output via `opcmAddress` field)
- `chainConfigs` — Array of chain-specific configurations (`systemConfigProxy`, `proxyAdmin`, `absolutePrestate`)
- `upgradeSuperchainConfig` — Whether to upgrade superchain config

## Usage Workflow

1. **Export env vars:**

   ```bash
   export NETWORK="mainnet"
   export OP_ROOT="/path/to/optimism"
   export DEPLOYER_PK="your_private_key"  # optional, defaults to Anvil key
   ```

2. **Run complete upgrade:**

   ```bash
   ./run_upgrade.sh
   ```

   Or run scripts individually:

   ```bash
   export MULTISIG_ADDRESS="0x4092A77bAF58fef0309452cEaCb09221e556E112"
   ./bootstrap.sh
   ./upgrade.sh
   ```

## Network Support

| Network | Environment | Multisig                                     |
| ------- | ----------- | -------------------------------------------- |
| chaos   | Testnet     | `0x6F8DB5374003c9ffa7084d8b65c57655963766a9` |
| sepolia | Testnet     | `0x5e60d897Cd62588291656b54655e98ee73f0aabF` |
| mainnet | Production  | `0x4092A77bAF58fef0309452cEaCb09221e556E112` |

## Notes

- The `run_upgrade.sh` script provides a safe default Anvil private key (`ac0974...`) for local testing
- Network-specific configurations are automatically applied based on the `NETWORK` environment variable
- The bootstrap output JSON key for OPCM address is `opcmAddress` (same as v4)
